--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -94,6 +94,12 @@
                                <i class="bi bi-clipboard-data me-1"></i> Tableau de bord
                             </a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link {{ 'active' if request.endpoint == 'main.classifier' }}"
+                               href="{{ url_for('main.classifier') }}">
+                                <i class="bi bi-robot me-1"></i> Classifier
+                            </a>
+                        </li>
                         {% if current_user %}
                         <li class="nav-item">
                             <a class="nav-link {{ 'active' if request.endpoint == 'main.upload' }}"
