--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -233,6 +233,7 @@
 
     <!-- JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
 
     {% block extra_scripts %}{% endblock %}
 </body>
