--- a/app/templates/upload.html
+++ b/app/templates/upload.html
@@ -142,7 +142,7 @@
       <span class="metadata-label">Date</span>
       <span class="metadata-value">
           {{ img.timestamp.strftime('%d/%m/%y %H:%M') }}
-          {% if img.timestamp_manual %} %}
+          {% if img.timestamp_manual %}
               <i class="bi bi-pencil-square field-origin-icon"
                  data-bs-toggle="tooltip"
                  title="Saisi manuellement"></i>
